Minor code tidying.